--- a/clase_16/desafios_genericos/package.json
+++ b/clase_16/desafios_genericos/package.json
@@ -1,5 +1,6 @@
 {
   "name": "desafios_genericos",
+	"type": "module",
   "version": "1.0.0",
   "description": "1. Node + MariaDB/MySQL",
   "main": "index.js",
