--- a/clase_16/entregable/package.json
+++ b/clase_16/entregable/package.json
@@ -8,5 +8,11 @@
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "express": "^4.18.1",
+    "knex": "^2.1.0",
+    "mysql": "^2.18.1",
+    "sqlite3": "^5.0.8"
+  }
 }
