--- a/clase_16/entregable/package.json
+++ b/clase_16/entregable/package.json
@@ -4,7 +4,9 @@
   "description": "Tomando como base las clases Contenedor en memoria y en archivos, desarrollar un nuevo contenedor con idénticos métodos pero que funcione sobre bases de datos, utilizando Knex para la conexión. Esta clase debe recibir en su constructor el objeto de configuración de Knex y el nombre de la tabla sobre la cual trabajará. Luego, modificar el desafío entregable de la clase 11”Chat con Websocket”, y: - Cambiar la persistencia de los mensajes de filesystem a base de datos SQLite3. - Cambiar la persistencia de los productos de memoria a base de datos MariaDB.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "createTable": "node ./src/script/createTable.js",
+    "dev": "nodemon ./src/server.js"
   },
   "keywords": [],
   "author": "",
@@ -13,6 +15,7 @@
     "express": "^4.18.1",
     "knex": "^2.1.0",
     "mysql": "^2.18.1",
+    "socket.io": "^4.5.1",
     "sqlite3": "^5.0.8"
   }
 }
