--- a/clase_31/desafios_genericos/package.json
+++ b/clase_31/desafios_genericos/package.json
@@ -13,6 +13,8 @@
 	"dependencies": {
 		"compression": "^1.7.4",
 		"express": "^4.18.1",
-		"log4js": "^6.6.0"
+		"log4js": "^6.6.0",
+		"pino": "^8.1.0",
+		"winston": "^3.8.1"
 	}
 }
