--- a/clase_22/entregable/package.json
+++ b/clase_22/entregable/package.json
@@ -12,7 +12,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.18.1",
+    "faker": "^5.5.3",
     "knex": "^2.1.0",
     "mysql": "^2.18.1",
     "socket.io": "^4.5.1",
