--- a/clase_25/desafios_genericos/package.json
+++ b/clase_25/desafios_genericos/package.json
@@ -1,8 +1,7 @@
 {
-	"type": "module",
   "name": "desafios_genericos",
   "version": "1.0.0",
-  "description": "1. Guardar datos en FileSystem",
+  "description": "1. Inicio de Sesion con username y password",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -12,7 +11,9 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.1",
+    "express-handlebars": "^6.0.6",
     "express-session": "^1.17.3",
-    "session-file-store": "^1.5.0"
+    "passport": "^0.6.0",
+    "passport-local": "^1.0.0"
   }
 }
